// based on https://grpc.io/docs/guides/concepts.html
syntax = "proto3";

package sayhello.service.v1;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_outer_classname = "SayHelloProtoV1";
option java_package = "dev.krathub.api.sayhello.v1";

// SayHello 定义一个简单的 Hello 服务
service SayHelloService {
  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/SayHello"
      body: "*"
    };
  }
}

// HelloRequest 是 Hello 服务的请求消息
message HelloRequest {
  string greeting = 1;
}

// HelloResponse 是 Hello 服务的响应消息
message HelloResponse {
  string reply = 1;
}
